opa-gatekeeper/opa-policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: container-image-must-not-have-following-tags
  labels:
    severity: high
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchLabels: {}
  parameters:
    tags:
      - latest
